[metadata]
name = pingnet
version = 0.4.1
author = Kevin Jin
author_email = skndmx@gmail.com
description = Script to ping network address(CIDR), IP address, hostname
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/skndmx/pingnet
project_urls =
    Bug Tracker = https://github.com/skndmx/pingnet/issues
    repository = https://github.com/skndmx/pingnet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent